--- a/ItIsOn/MainWindow.xaml
+++ b/ItIsOn/MainWindow.xaml
@@ -39,16 +39,20 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         
-        <StackPanel Grid.Row="0" x:Name="MainMenu" HorizontalAlignment="Center" Visibility="Visible">
+        <StackPanel Grid.Row="0" x:Name="MainMenu" HorizontalAlignment="Center" Visibility="Hidden">
             <Label Content="It is OFF!" HorizontalAlignment="Center" FontSize="25" Foreground="Tomato" FontWeight="Heavy"/>
             <Label Content="modes:" FontSize="18"/>
-            <Button Content="prevent SCREENSAVER and SLEEP"/>
-            <Button Content="prevent SLEEP"/>
+            <Button Content="prevent SCREENSAVER and SLEEP" Command="{Binding PreventScreensaverAndSleepCommand}"/>
+            <Button Content="prevent SLEEP" Command="{Binding PreventSleepCommand}"/>
         </StackPanel>
-        <StackPanel Grid.Row="0" x:Name="ModeSelectedMenu" HorizontalAlignment="Center" Visibility="Hidden">
-            <Label Content="It is ON!" HorizontalAlignment="Center" FontSize="25" Foreground="LightGreen" FontWeight="Heavy"/>
+        <StackPanel Grid.Row="0" x:Name="ModeSelectedMenu" HorizontalAlignment="Center" Visibility="Visible">
+            <Label Content="It is ON!" HorizontalAlignment="Center" FontSize="25" Foreground="ForestGreen" FontWeight="Heavy"/>
             <Label Content="selected mode:"  FontSize="18"/>
-            <Label Content="" />
+            <Label Content="{Binding SelectedMode}" />
+            <WrapPanel>
+                <Label Content="status: "/>
+                <Label Content="{Binding Status}"/>
+            </WrapPanel>
             <Button Content="&lt; Back"/>
         </StackPanel>
     </Grid>
